--- a/samples/SocketsSample/project.json
+++ b/samples/SocketsSample/project.json
@@ -14,7 +14,8 @@
     "Microsoft.AspNetCore.Server.WebListener": "0.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0-*",
     "Microsoft.Extensions.Logging.Console": "1.1.0-*",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0-*",
+    "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
     "StackExchange.Redis": "1.1.*",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0-*",
     "Microsoft.Extensions.Configuration.Json": "1.1.0-*",
@@ -22,7 +23,8 @@
   },
 
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
+    "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
