--- a/samples/SocketsSample/project.json
+++ b/samples/SocketsSample/project.json
@@ -19,7 +19,8 @@
     "StackExchange.Redis": "1.1.*",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0-*",
     "Microsoft.Extensions.Configuration.Json": "1.1.0-*",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0-*"
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.1.0-*",
+    "Microsoft.Extensions.Configuration.CommandLine": "1.1.0-*"
   },
 
   "tools": {
