major updates to WebSockets implementation
* Ping/Pong handling
* UTF-8 validation
* Customization through WebSocketOptions
* Closes connection on Protocol Errors
* Autobahn Test Suite integrated

--- a/src/Microsoft.AspNetCore.Sockets/project.json
+++ b/src/Microsoft.AspNetCore.Sockets/project.json
@@ -1,13 +1,13 @@
 ﻿{
-  "version": "0.1.0-*",
-  "dependencies": {
-    "Channels": "0.2.0-beta-*",
-    "Microsoft.AspNetCore.Routing": "1.1.0-*",
-    "Microsoft.AspNetCore.WebSockets": "0.2.0-*"
-  },
-  "frameworks": {
-    "netstandard1.3": {
+    "version": "0.1.0-*",
+    "dependencies": {
+        "Channels": "0.2.0-beta-*",
+        "Microsoft.AspNetCore.Routing": "1.1.0-*",
+        "Microsoft.AspNetCore.WebSockets": "0.2.0-*",
+        "NETStandard.Library": "1.6.0"
     },
-    "net46": { }
-  }
+    "frameworks": {
+        "netstandard1.3": {},
+        "net46": {}
+    }
 }
